# backend-engineering-challenge

./: README.md  pyproject.toml  requirements.txt
benchmark/: create_files.sh  create_test_data.py  run_all.sh
benchmark/data/: data_example
src/app/: aggregations.py  exceptions.py  main.py  models.py
src/tests/: test_aggregation.py  test_inputs.py  test_models.py
